# atlas-picker

./: .mcp.json  CLAUDE.md  Cargo.toml  Justfile  figlet_options.txt
shell/: pj.zsh
src/: main.rs  project.rs  splash.rs  theme.rs  ui.rs
