[package]
name = "project-picker"
version = "0.1.0"
edition = "2021"
description = "Fast fuzzy project picker using project-index cache"

[dependencies]
nucleo = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
