[package]
name = "project-picker"
version = "0.1.0"
edition = "2021"
description = "Fast fuzzy project picker using project-index cache"

[dependencies]
nucleo = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iocraft = "0.7"
smol = "2"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
ureq = { version = "3", features = ["json"] }
arboard = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
